update umap mandate page titles

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Autopay
-page_title: UMAP - Autopay
+sidebar_title: UPI Mandates
+page_title: UPI Mandates
 order: 4
 visible_in_sidebar: true
 ---
@@ -9,16 +9,16 @@ visible_in_sidebar: true
 
 <hr class="primary"/>
 
-### What is UPI Autopay ?
+### What is a UPI Mandate ?
 
-UPI Autopay is a recurring payments product built on the same rails of UPI which enables businesses to create subscriptions or one-time block based payments seamless via the user's favourite UPI app.  
+UPI Mandate is a recurring payments product built on the same rails of UPI which enables businesses to create subscriptions or one-time block based payments seamless via the user's favourite UPI app.  
 
-### What can I do with UPI Autopay ?
+### What can I do with UPI Mandates ?
 * Enable limited stock purchases like IPO investments on your wealth app
 * Create seamless subcsriptions for your services directly from UPI apps
 * Reimagine Cash on Delivery and Try & Buy with single block multi debits
 
-##### Exlore our UPI autopay products
+##### Exlore our UPI Mandate products
 
 <UMAPMandates />
 
