Refine language, spelling, capitalisation, spacing and some layout across UMAP docs.

--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -8,13 +8,13 @@ visible_in_sidebar: true
 ## Merchant API Integration
 
 <Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
+    <Text weight="600">
+        Prerequisites:&nbsp;
+        <a href="/payments/umap/quickstart/merchants" target="_blank">Merchant quickstart ↗</a>
     </Text>
-    <a href="/payments/umap/quickstart/merchants">Merchant Quickstart ↗</a>
 </Card>
 
-Once a merchant has onboarded onto UMAP and has their API credentials, the next step is to choose the right product for your usecase.
+Once you have on-boarded on to UMAP as a merchant, and have your API credentials, the next step is to choose the right product for your use case.
 
 ### What can you do with UMAP?
 
@@ -22,12 +22,12 @@ Once a merchant has onboarded onto UMAP and has their API credentials, the next 
 
 -   Offer QR code and payment links for customers in-store or via apps and messaging.
 -   Enhance guest checkout with direct UPI collect payments on preferred UPI apps.
--   For BFSI merchants, comply with regulations through Third Party Validation(TPV).
+-   For BFSI merchants, comply with regulations through Third Party Validation (TPV).
 
-##### Autopay
+##### Mandates
 
 -   Use one-time mandates to clear limited stock exclusively for designated customers.
--   Instantly create service subscriptions with UPI Autopay for recurring payments.
+-   Instantly create service subscriptions with UPI Mandates for recurring payments.
 -   Replicate wallet functionality with single block multi-debit mandates from savings accounts.
 
 <hr class="primary" />
@@ -35,7 +35,7 @@ Once a merchant has onboarded onto UMAP and has their API credentials, the next 
 ### Select the right product for your use-case
 
 <Row>
-    <Portion desktopSpan="half">
+    <Portion desktopSpan="half" marginBottom="nano">
         <Card padding="small" shape="rounded">
             <Link href="/payments/umap/payments">
                 <Element as="div">
@@ -57,7 +57,7 @@ Once a merchant has onboarded onto UMAP and has their API credentials, the next 
                         Mandates
                     </Text>
                     <Text weight="400">
-                        Start accepting recurring payments with UPI Autopay.
+                        Start accepting recurring payments with UPI Mandates.
                     </Text>
                 </Element>
             </Link>
