--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -1,51 +1,47 @@
 ---
-sidebar_title: Autopay
-page_title: UMAP - Autopay
+sidebar_title: Mandates
+page_title: UMAP - Mandates
 order: 4
 visible_in_sidebar: true
 ---
 
 # UPI Mandates
 
-<hr class="primary"/>
+UPI Mandates is a recurring payments product built on the same rails of UPI which enables businesses to create subscriptions or one-time block based payments seamless via the user's favourite UPI app.  
 
-### What is UPI Autopay ?
-
-UPI Autopay is a recurring payments product built on the same rails of UPI which enables businesses to create subscriptions or one-time block based payments seamless via the user's favourite UPI app.  
-
-### What can I do with UPI Autopay ?
+## What can I do with UPI Mandates?
+Choose one or more of our products under the UMAP Mandates stack to
 * Enable limited stock purchases like IPO investments on your wealth app
 * Create seamless subcsriptions for your services directly from UPI apps
-* Reimagine Cash on Delivery and Try & Buy with single block multi debits
+* Reimagine **cash on delivery** or **try and buy** with single block multi debits
 
-##### Exlore our UPI autopay products
-
+###### Explore our mandate products
 <UMAPMandates />
 
-### Key Features
+### Key features
 
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/Frame_106/Frame_106.png"
     alt="Bridge"
 />
 
-### UPI mandate statuses
+#### UPI mandate statuses
 
-A UPI autopay mandate will flow through the below statuses throughout its lifecycle -
+A mandate will flow through the below statuses throughout its lifecycle -
 
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/Frame_109/Frame_109.png"
     alt="Bridge"
 />
 
-`Mandate Initiated :` A mandate creation request has been initiated. 
+`mandate_initiated`&nbsp;A mandate creation request has been initiated. 
 
-`Mandate Live :` Customer authorization received & mandate is now active. 
+`mandate_live` Customer authorization received & mandate is now active. 
 
-`Mandate Complete :` Mandate executions are done, and now mandate is closed.  
+`mandate_complete`&nbsp;Mandate executions are done, and now mandate is closed.  
 
-`Mandate Rejected:` Due to error or no authorization, mandate could not be created.   
+`mandate_rejected`&nbsp;Due to error or no authorization, mandate could not be created.   
 
-`Mandate Paused:` Customer has decided to temporarily stop executions on mandate.   
+`mandate_paused`&nbsp;Customer has decided to temporarily stop executions on mandate.   
 
-`Mandate Revoked:` Mandate was closed by customer or merchant before expiry. 
+`mandate_revoked`&nbsp;Mandate was closed by customer or merchant before expiry. 
