--- a/content/payments/umap/mandates/generic.mdx
+++ b/content/payments/umap/mandates/generic.mdx
@@ -23,9 +23,9 @@ There are four main operations that can happen on a UPI mandate after creation:
     <Link href="/payments/umap/mandates">
         <Element as="div">
             <Text size="large" weight="600" textColor="blue-90">
-                UPI Autopay Overview ↗
+                UPI Mandates Overview ↗
             </Text>
-            <Text weight="400">Explore other UMAP UPI Autopay products here.</Text>
+            <Text weight="400">Explore other UMAP UPI Mandates products here.</Text>
         </Element>
     </Link>
 </Card>
