--- a/content/payments/umap/mandates/generic/revoke.mdx
+++ b/content/payments/umap/mandates/generic/revoke.mdx
@@ -12,7 +12,7 @@ visible_in_sidebar: true
         Prerequisites
     </Text>
     <a href="/payments/umap/mandates/generic">
-        UPI Autopay Generic Operations ↗
+        UPI Mandates Generic Operations ↗
     </a>
 </Card>
 
@@ -305,8 +305,8 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 
 <NextPage
     info={{
-        description: "Explore other UMAP UPI Autopay generic operations here",
+        description: "Explore other UMAP UPI Mandates generic operations here",
         slug: "/payments/umap/mandates/generic",
-        title: "UPI Autopay Generic Operations",
+        title: "UPI Mandates Generic Operations",
     }}
 />
