--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -1,64 +1,63 @@
 ---
-sidebar_title: Merchant Onboarding
-page_title: UMAP - Merchant Onboarding
+sidebar_title: Merchant on-boarding
+page_title: UMAP - Merchant on-boarding
 order: 2
 visible_in_sidebar: true
 ---
 
-## Merchant Onboarding
+## Merchant on-boarding
 
 <Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
+    <Text weight="600">
+        Prerequisites:&nbsp;
+        <a href="/payments/umap/api-integration/aggregators" target="_blank">Aggregator API Integration ↗</a>
     </Text>
-    <a href="/payments/umap/api-integration/aggregators">
-        Aggregator API Integration ↗
-    </a>
 </Card>
 
-An Aggregator can seamlessly integrate merchants into the UMAP ecosystem, enabling them to start accepting UPI payments. This journey involves initial information collection to the final activation of the merchant’s ability to process transactions.
+An **Aggregator** can seamlessly on-board merchants onto the UMAP ecosystem, and enable them to start accepting UPI payments. This journey starts from collecting a merchant‘s business details, setting up their configuration and ends with the activation of the merchant’s ability to process transactions.
 
-<hr class="primary" />
+<br/>
 
-#### Step 1 - Information Collection
+#### Step 1 - Collect necessary information about merchant
 
-The journey begins with the operations team gathering all necessary details from the merchant. This step is foundational, ensuring that the UMAP system has all the relevant information to proceed with the onboarding process.
+As the first step, the operations team gathers necessary details from the merchant, ensuring that the UMAP system has all the relevant information to proceed with the on-boarding process.
 
-<hr class="primary" />
+<br/>
 
-#### Step 2 - Create a Merchant
+#### Step 2 - Create a merchant
 
-Upon collecting the merchant's information, a preliminary verification is conducted. The merchant's record is then created in the UMAP system, marking the formal initiation of their onboarding journey.
+After collecting the merchant's information, a preliminary verification is conducted. Then, a record for the merchant is created in the UMAP system, which formally initiates their on-boarding journey.
 
 <a
-    href="/payments/umap/merchant-onboarding/create-merchant-api"
+    href="/payments/umap/merchant-on-boarding/create-merchant-api"
     target="_blank"
 >
-    <code>Create Merchant API</code> ↗
+    Create Merchant API ↗
 </a>
 
-<hr class="primary" />
+<br/>
+<br/>
 
-#### Step 3 - VPA Creation
-
-If the VPA is available, it is created and assigned to the merchant. This final step equips the merchant with the capability to accept payments via UPI, completing the onboarding process and marking the beginning of their transaction journey on the UMAP platform.
-
-<a href="/payments/umap/merchant-onboarding/create-vpa-api" target="_blank">
-    <code>Create VPA API</code> ↗
-</a>
+#### Step 3 - Set up VPA
+A VPA has to be created for the merchant, before they can start transacting on UMAP. This gives the merchant the capability to accept payments via UPI, completing the on-boarding process. This can include 2 steps—
 
 ###### Checking VPA Availability (optional)
 
-Before a merchant can start transactions, they need a Virtual Payment Address (VPA). The system checks for the availability of the desired VPA, ensuring it's unique and can be assigned to the merchant without conflicts.
-
+This API helps you check the availability of a desired VPA, to ensure it is unique and can be assigned to the merchant without conflicts.
 <a
-    href="/payments/umap/merchant-onboarding/check-vpa-availability-api"
+    href="/payments/umap/merchant-on-boarding/check-vpa-availability-api"
     target="_blank"
 >
-    <code>Check VPA Availability API</code> ↗
+    Check VPA Availability API ↗
 </a>
 
-By meticulously following these steps, UMAP ensures a smooth and efficient onboarding experience for merchants, setting the stage for their successful integration into the digital payments landscape.
+###### Assign VPA (required)
+The next API is used to assign a VPA to the merchant
+<a href="/payments/umap/merchant-on-boarding/create-vpa-api" target="_blank">
+    Create VPA API ↗
+</a>
+
+With this last step, merchant on-boarding is completed seamlessly! The merchant can now initiate transactions on UPI.
 
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/Frame_108/Frame_108.png"
@@ -67,34 +66,37 @@ By meticulously following these steps, UMAP ensures a smooth and efficient onboa
 
 <hr class="primary" />
 
-## Merchant Operations
+## Merchant management
 
-#### Merchant Txn Status Updation
+#### Update merchant status
 
-If a merchant needs to be disabled by an aggregator then they can call this API to update their transaction status. If a merchant is disabled UMAP will decline all transactions to the merchant VPA.
+If a merchant needs to be disabled by an aggregator then they can call this API to update their status. If a merchant is disabled UMAP will decline all transactions to the VPA assigned to this particular merchant.
 
 <a
     href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateTxnStatus"
     target="_blank"
 >
-    <code>Update Merchant Transaction Status API</code> ↗
+    Update merchant status API ↗
 </a>
 
-#### Merchant Record Updation
+<br/>
 
-This API can be called to update the information associated with the merchant like settlement configs, KYC information that may be required for accepting different payment instruments on UPI.
+#### Update merchant details
+
+This API can be called to update the information associated with the merchant like settlement configuration or KYC information that may be required for accepting different payment instruments on UPI.
 
 <a
     href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateConfig"
     target="_blank"
 >
-    <code>Update Merchant Configs API</code> ↗
+    Update merchant details API ↗
 </a>
 
-<hr class="primary" />
+<br/>
+<br/>
 
 <Row>
-    <Portion desktopSpan="half">
+    <Portion desktopSpan="half" marginBottom="nano">
         <Link href="/payments/umap/api-integration/aggregators">
             <Card padding="micro" shape="rounded">
                 <Text
@@ -129,7 +131,7 @@ This API can be called to update the information associated with the merchant li
                     Mandates
                 </Text>
                 <Text weight="400">
-                    Enable recurring payments with UPI Autopay
+                    Enable recurring payments with UPI Mandates
                 </Text>
             </Card>
         </Link>
