--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -1,14 +1,14 @@
 ---
 sidebar_title: Check VPA Availability
-page_title: UMAP - Merchant Onboarding - Check VPA Availability
+page_title: UMAP - Merchant on-boarding - Check VPA Availability
 order: 2
 visible_in_sidebar: true
 ---
 
-## Check VPA Availability
-<Callout type='tip'>This is an optional flow, but to avoid conflicts, check vpa validity before assigning</Callout>
-<br/>
-VPAs act as unique identifiers in the UPI ecosystem. This item can be used to validate the availability of a VPA to check if it can be associated with a merchant.
+# Check VPA availability
+VPAs act as unique identifiers for merchants in the UPI ecosystem, so it is highly recommended that you check VPA validity before assigning it to a merchant, to avoid conflicts. 
+
+Use the following API to check if it is already associated with another merchant or not.
 
 <table>
     <tbody>
@@ -49,10 +49,10 @@ VPAs act as unique identifiers in the UPI ecosystem. This item can be used to va
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~vpa/operation~vpa#checkAvailability"target="_blank">
-                    Check VPA Availability ↗
+                    Check VPA availability ↗
                 </a>
             </td>
         </tr>
