--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -1,21 +1,21 @@
 ---
 sidebar_title: Create Merchant
-page_title: UMAP - Merchant Onboarding - Create Merchant
+page_title: UMAP - Merchant on-boarding - Create Merchant
 order: 1
 visible_in_sidebar: true
 ---
 
-## Create Merchant
+# Create merchant
 
-Create merchants in UMAP with this API by providing business details & aggregator ID for onboarding and enabling transactions for the merchant.
+You can use the following API, to on-board merchants in UMAP, by providing business details and your `aggregatorID`.
 
-<Callout type='tip'>For direct merchants, aggregator ID can be accessed from Bridge</Callout>
+<Callout type='tip'>For merchants acquired directly, `aggregatorID` can be accessed from Bridge</Callout>
 <br/>
 
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -50,10 +50,10 @@ Create merchants in UMAP with this API by providing business details & aggregato
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~merchant/operation~merchant#createMerchantWrapper"target="_blank">
-                    Create Merchant ↗
+                    Create merchant ↗
                 </a>
             </td>
         </tr>
@@ -75,7 +75,7 @@ Create merchants in UMAP with this API by providing business details & aggregato
     "mcc": "5432",
     "merchantName": "deku",
     "merchantType": "small",
-    "onboardingType": "bank",
+    "on-boardingType": "bank",
     "paymentModes": [
         "savings",
         "lite",
@@ -112,7 +112,7 @@ Create merchants in UMAP with this API by providing business details & aggregato
   "mcc": "5432",
   "merchantName": "deku",
   "merchantType": "small",
-  "onboardingType": "bank",
+  "on-boardingType": "bank",
   "paId": "1237799847336085408",
   "paymentModes": [
     "savings",
