--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -1,18 +1,17 @@
 ---
 sidebar_title: Create VPA
-page_title: UMAP - Merchant Onboarding - Create VPA API
+page_title: UMAP - Merchant on-boarding - Create VPA API
 order: 3
 visible_in_sidebar: true
 ---
 
-## Create VPA
-
-This API can be used to assign a VPA to a merchant which will serve as the merchant identifier across all players in the UPI ecosystem
+# Create VPA
+This API can be used to assign a VPA to a merchant, which will serve as the merchant identifier across all participants in the UPI ecosystem.
 
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -48,7 +47,7 @@ This API can be used to assign a VPA to a merchant which will serve as the merch
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~vpa/operation~vpa#create"target="_blank">
                     Create VPA ↗
