--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -5,57 +5,25 @@ order: 7
 visible_in_sidebar: true
 ---
 
-## Notifications & Alerts
+## Notifications and alerts
 
 <Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
+    <Text weight="600">
+        Prerequisites:&nbsp;
+        <a href="/payments/umap/quickstart" target="_blank">Quickstart ↗</a>
     </Text>
-    <Link href="/payments/umap/quickstart">Quickstart ↗</Link>
 </Card>
-
-<hr class="primary" />
 
 UMAP has a robust notification system to provide a transparent experience for our merchants.
 
--   Repetitive retries to ensure notification delivery to customers
--   Comprehensive coverage across all financial and non-financial flows
--   Configurable notification endpoints at merchant and aggregator levels
+-   <p>Repetitive retries to ensure notification delivery to customers</p>
+-   <p>Comprehensive coverage across all financial and non-financial flows</p>
+-   <p>Configurable notification endpoints at merchant and aggregator levels</p>
 
-Understand our notification payloads for each of our products.
+Understand the notification payloads for each of our products—
 
-<ul>
-    <li>
-        Payments. Read more{" "}
-        <a href="/payments/umap/notifications/payments" target="_blank">
-            here
-        </a>
-    </li>
-    <li>
-        Mandates. Read more{" "}
-        <a href="/payments/umap/notifications/mandates" target="_blank">
-            here
-        </a>
-    </li>
-    <li>
-        Refunds. Read more{" "}
-        <a href="/payments/umap/notifications/refunds" target="_blank">
-            here
-        </a>
-    </li>
-    <li>
-        Disputes. Read more{" "}
-        <a href="/payments/umap/notifications/disputes" target="_blank">
-            here
-        </a>
-    </li>
-    <li>
-        Customer VPA Verification. Read more{" "}
-        <a
-            href="/payments/umap/notifications/customer-vpa-verification"
-            target="_blank"
-        >
-            here
-        </a>
-    </li>
-</ul>{" "}
+- **<a href="/payments/umap/notifications/payments" target="_blank">Payments ↗</a>**
+- **<a href="/payments/umap/notifications/mandates" target="_blank">Mandates ↗</a>**
+- **<a href="/payments/umap/notifications/refunds" target="_blank">Refunds ↗</a>**
+- **<a href="/payments/umap/notifications/disputes" target="_blank">Disputes ↗</a>**
+- **<a href="/payments/umap/notifications/customer-vpa-verification" target="_blank">Customer VPA Verification ↗</a>**
