--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -7,30 +7,31 @@ visible_in_sidebar: true
 
 ## Overview
 
-### What is UPI?
+#### What is UPI Merchant Acquiring Platform (UMAP)?
 
-Unified Payments Interface (UPI) is a digtial payment system developed by NPCI that enables customers to pay for goods and services real-time, across any UPI app with different payment methods like savings accounts & credit cards from the convenience of their phone.
+UPI Merchant Acquiring Platform (UMAP) is a comprehensive UPI product suite designed by Setu to empower **_merchants_** and **_merchant aggregators_** by providing state-of-the-art UPI solutions. 
 
-### What is UPI Merchant Acquiring Platform?
+UMAP connects directly with NPCI, absorbing both acquirer and beneficiary bank sides of the transaction to provide a seamless UPI-first product experience to our users.
 
-UPI Merchant Acquiring Platform (UMAP) is a comprehensive UPI product suite designed by Setu to empower `merchants` and `aggregators` by providing **state-of-the-art UPI solutions**. UMAP has a direct connectivity with NPCI, absorbing both acquirer & beneficiary bank legs of the transaction to provide a seamless UPI-first product experience to our users.
+_<Text size="small">Unified Payments Interface (UPI) is a digital payment system developed by NPCI that enables customers to pay for goods and services real-time, across any UPI app with different payment methods—like savings accounts or credit cards—from the convenience of their phone.</Text>_
 
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/UPI_Merchant_Acquiring_Platform_Setu_Jio_Payments_Bank/UPI_Merchant_Acquiring_Platform_Setu_Jio_Payments_Bank.png"
     alt="Bridge"
 />
 
-#### Key Features
+#### Key features
 
--   **Express Ledger**: Fully managed beneficiary leg to drastically reduce deemed transactions and avoid bank failures.
--   **Refunds & Disputes**: Specialized APIs for handling refunds and disputes increasing operational value.
--   **Latest NPCI Compliant Stack**: Latest UPI offerings & compliances due to direct partnership wit NPCI
+-   **Express ledger**—Fully managed beneficiary leg to drastically reduce deemed transactions and avoid bank failures.
+-   **Refunds and disputes**—Specialised APIs to handle refunds and disputes, thus increasing operational value.
+-   **Latest NPCI compliant stack**—Adherence to the latest UPI offerings and compliances, because of the direct partnership with NPCI.
 
+<br/>
 
 #### What can you do with UMAP?
--   **UPI Payments**: Enable all UPI payments using QR, Payment Links & In-app deployment with our APIs.
--   **Recurring Mandates**: Customizable recurring payments with UPI Autopay for all your use cases.
--   **UPI for Financial Services**: Enable BFSI specific products like Third Party Validation & Single Block Multi Debit.
+-   **One time UPI payments**—Enable all UPI payments using QR, Payment Links and in-app deployment with our APIs.
+-   **Recurring mandate payments**—Customisable recurring payments with UPI Mandates for all your use cases.
+-   **UPI for financial services**—Enable BFSI specific products like Third Party Validation and Single Block Multi Debit.
 
 
 <NextPage
