--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -9,46 +9,51 @@ visible_in_sidebar: true
 
 Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India that facilitates inter-bank transactions through a mobile app. 
 
-### What can you do with Payments?
+## What can you do with UMAP Payments?
+Choose one or more of our products under the UMAP Payments stack to
 
-* Retarget your churning D2C customers with payment links on messaging campaigns
-* Enable web-based checkouts using collect flow to consume customer vpa on your website
-* Use Third Party Validation(TPV) to verify customer details and remain compliant
+- Re-target churning D2C customers with payment links in messaging campaigns
+- Enable web-based checkouts by using a customer VPA input on your website to trigger a collection flow
+- Use Third Party Validation (TPV) to verify customer details and remain compliant
 
-###### Explore our UPI payment products
-
+###### Explore our payment products
 <UMAPPayments />
 
 <hr class="primary" />
 
-### Payment Statuses
+## Core concepts for Payment products
+UMAP relies on a few features that persist across various products offered under the **Payments** stack. These have been listed below.
 
+<br/>
+
+#### Payment statuses
+UMAP has consistent and transparent payment statuses across all transaction flows.  
 <img
   src="https://storage.googleapis.com/strapi-assets/latest/Frame_72/Frame_72.png"
   alt="Bridge"
 />
 
-UMAP has consistent and transparent payment statuses across all transaction flows.  
+`payment_initiated`&nbsp;Payment has been attempted by a customer. 
 
-`Payment Initiated :` Payment has been attempted by a customer. 
+`payment_ending`&nbsp;Payment is currently being processed by UMAP. 
 
-`Payment Pending :` Payment is currently being processed by UMAP. 
+`payment_successful`&nbsp;Payment has been successfully completed. 
 
-`Payment Successful :` Payment has been successful completed. 
+`payment_failed`&nbsp;Payment could not be processed. 
 
-`Payment Failed :` Payment could not be processed. 
+<br/>
 
-<hr class="primary" />
+#### Conditional, scenario-based flows
 
-## Conditional Flows
+Conditional flows are optional steps that may be executed in response to specific scenarios that arise after a transaction is completed.
 
-Conditional flows are optional steps that may be executed in response to specific scenarios post-transaction:
+These flows ensure that merchants are able to efficiently manage transactions—from initiation to resolution—thus providing a streamlined payment experience for their customers.
 
-#### Dispute Retrieval
+###### Dispute retrieval
 
 If a customer raises a dispute regarding a transaction, this API call allows for the retrieval of dispute details using a unique identifier, facilitating timely resolution.
 
-#### Initiate Refund
+###### Initiate refund
 
 In cases where a dispute arises or as a necessary step in the transaction process, a refund can be initiated. This API, typically prompted by the merchant, reverses the transaction amount to the customer.
 
@@ -56,18 +61,14 @@ In cases where a dispute arises or as a necessary step in the transaction proces
     <Link href="/payments/umap/refunds-disputes">
         <Element as="div">
             <Text size="large" weight="600" textColor="blue-90">
-                Refunds & Disputes
+                Refunds and disputes
             </Text>
             <Text weight="400">Manage your refunds and disputes.</Text>
         </Element>
     </Link>
 </Card>
 
-
 <hr class="primary" />
-
-These steps and conditional flows ensure merchants can efficiently manage transactions, from initiation to resolution, providing a streamlined payment experience for customers through the UMAP platform.
-
 
 <NextPage
     info={{
