--- a/content/payments/umap/payments/tpv.mdx
+++ b/content/payments/umap/payments/tpv.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## Third Party Validation
 
-The Third Party Validation (TPV) request introduces an enhanced layer of security to the traditional payment link process by incorporating a conditional validation check of the customer’s bank account details. This procedure is designed to ensure that payments are made from a bank account that has been previously registered with the merchant, typically during the onboarding or KYC process.
+The Third Party Validation (TPV) request introduces an enhanced layer of security to the traditional payment link process by incorporating a conditional validation check of the customer’s bank account details. This procedure is designed to ensure that payments are made from a bank account that has been previously registered with the merchant, typically during the on-boarding or KYC process.
 
 ### TPV Process
 The TPV process is a mandatory check required for most capital markets merchants and is mandated by SEBI to ensure that funds are collected from a verified account of the customer only. It can also be beneficial for other use-cases like insurance, loans and loyalty programs.
