--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -20,7 +20,7 @@ This guide will help you get started with UMAP integration as a Merchant
 
 ### What is an Merchant
 
-A merchant on UMAP is any business that wants to collect UPI payments from their customers to provide goods & services or use UPI autopay for setting up recurring payments like subscriptions with their customers.
+A merchant on UMAP is any business that wants to collect UPI payments from their customers to provide goods & services or use UPI Mandates for setting up recurring payments like subscriptions with their customers.
 
 <hr class="primary" />
 
