--- a/content/payments/umap/transaction-monitoring.mdx
+++ b/content/payments/umap/transaction-monitoring.mdx
@@ -5,19 +5,20 @@ order: 5
 visible_in_sidebar: false
 ---
 
-## Transaction Monitoring
+## Transaction monitoring
 
-### Transaction Statuses
+### Transaction statuses
 
-The UMAP platform ensures transparency throughout the transaction process by defining clear statuses that a transaction can assume from initiation to completion. These statuses reflect the transaction's current state, based on the responses received from various entities involved. Understanding these statuses will help merchants manage transactions effectively.
+The UMAP platform ensures transparency throughout the transaction cycle, by defining clear statuses that a transaction can have from initiation to completion. These statuses reflect the transaction's current state, based on the responses received from various entities involved. Understanding these statuses helps merchants manage transactions effectively.
 
-`Payment Initiated :` Payment has been attempted by a customer. 
 
-`Payment Pending :` Payment is currently being processed by UMAP. 
+`payment_initiated`&nbsp;Payment has been attempted by a customer. 
 
-`Payment Successful :` Payment has been successful completed. 
+`payment_ending`&nbsp;Payment is currently being processed by UMAP. 
 
-`Payment Failed :` Payment could not be processed. 
+`payment_successful`&nbsp;Payment has been successfully completed. 
+
+`payment_failed`&nbsp;Payment could not be processed. 
 <img
   src="https://storage.googleapis.com/strapi-assets/latest/transaction-statuses/transaction-statuses.png"
   alt="Bridge"
