--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -5,14 +5,14 @@ order: 2
 visible_in_sidebar: true
 ---
 
-## API Guide
+# API Guide
 
 <p>
     Once you get the <code>clientID</code> and <code>secret</code> from Setu,
     use them to generate the token.
 </p>
 
-### Generate Access Token
+### Generate access token
 
 An API to generate access tokens, which are used to authorise any other API requests made to Setu.
 
@@ -20,7 +20,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 <table>
     <tr>
-        <th>Staging Host</th>
+        <th>Staging host</th>
         <td>
             <code>https://accountservice-dev.setu.co</code>
         </td>
@@ -49,7 +49,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 <br />
 
-**Request Body**
+**Request body**
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -69,8 +69,10 @@ An API to generate access tokens, which are used to authorise any other API requ
 </CodeBlockWithCopy>
 
 <Callout type="tip">
-    💡 <code>access_token</code> is valid for 5 mins.
+    💡 The <code>access_token</code> is valid for 5 minutes.
 </Callout>
+
+<br/>
 
 ##### How to use the access token
 
@@ -79,7 +81,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 <hr class="primary" />
 
-### Refresh Access Token
+### Refresh access token
 
 <p>
     <strong>Before expiry</strong>, use the stored <code>refresh_token</code>{" "}
@@ -119,7 +121,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 <br />
 
-**Request Body**
+**Request body**
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -143,23 +145,23 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 <hr class="primary" />
 
-##### Choose your type of integration
+### Proceed with integration
 
 <Row>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <Link href="/payments/umap/api-integration/aggregators">
-                Aggregators
-            </Link>
-            <p>Start integrating as an aggregator</p>
-        </Card>
-    </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
             <Link href="/payments/umap/api-integration/merchants">
                 Merchants
             </Link>
-            <p>Start integrating as a merchant</p>
+            <p>Start integrating as a merchant to start accepting payments over UPI.</p>
+        </Card>
+    </Portion>
+    <Portion desktopSpan="half">
+        <Card padding="small" shape="rounded">
+            <Link href="/payments/umap/api-integration/aggregators">
+                Aggregators
+            </Link>
+            <p>Start integrating as an aggregator, to on-board and manage multiple merchants.</p>
         </Card>
     </Portion>
 </Row>
