--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -8,22 +8,24 @@ visible_in_sidebar: true
 ## Aggregator API Integration
 
 <Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
+    <Text weight="600">
+        Prerequisites:&nbsp;
+        <a href="/payments/umap/quickstart/aggregators" target="_blank">Aggregator quickstart ↗</a>
     </Text>
-    <a href="/payments/umap/quickstart/aggregators">Aggregator Quickstart ↗</a>
 </Card>
 
-Once the aggregator has been onboarded onto bridge and business formalities have been completed, you can now proceed to integrate UMAP with your internal systems. As an aggregator you have to first create a merchant and then create products that are made available to your merchants based on your configuration.
+Once you have been on-boarded on to Bridge as an aggregator and business formalities have been completed, you can proceed to integrate UMAP APIs with your internal systems. First, you have to create a merchant and then enable products the merchant can use.
+
+<hr class="primary" />
 
 #### Step 1 — Configure a merchant
 
-An aggregator on UMAP has to first create a merchant associated with them by providing merchant's business details and creating a VPA for the merchant which will associate them to the aggregator. The aggregator can now begin configuring UPI products for the merchant.
+As an aggregator on UMAP, you have to first create a merchant by providing their business details and creating a VPA (which associates them to you, the aggregator). After this, you can enable UPI products for the merchant.
 
 <Card padding="small" shape="rounded">
-    <Link href="/payments/umap/merchant-onboarding">Merchant Onboarding</Link>
+    <Link href="/payments/umap/merchant-on-boarding">Merchant on-boarding</Link>
     <Text weight="400" marginTop="nano" marginBottom="none" size="small">
-        Create your first merchant on UMAP.
+        Create your first merchant on UMAP
     </Text>
 </Card>
 
@@ -34,7 +36,7 @@ An aggregator on UMAP has to first create a merchant associated with them by pro
 Once a merchant has been associated to your aggregator account, you can now enable UPI payments and subscription products for them using our Payments & Mandates APIs.
 
 <Row>
-    <Portion desktopSpan="half">
+    <Portion desktopSpan="half" marginBottom="nano">
         <Card padding="small" shape="rounded">
             <Link href="payments/umap/payments">Payments</Link>
             <Text
@@ -47,7 +49,7 @@ Once a merchant has been associated to your aggregator account, you can now enab
             </Text>
         </Card>
     </Portion>
-    <Portion desktopSpan="half">
+     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
             <Link href="payments/umap/mandates">Mandates</Link>
             <Text
@@ -56,7 +58,7 @@ Once a merchant has been associated to your aggregator account, you can now enab
                 marginBottom="none"
                 size="small"
             >
-                Enable recurring payments with UPI Autopay
+                Enable recurring payments with UPI mandates
             </Text>
         </Card>
     </Portion>
@@ -66,13 +68,13 @@ Once a merchant has been associated to your aggregator account, you can now enab
 
 #### Step 3 — Manage your merchants
 
-After creating products for your merchants on UMAP, you can also easily manage merchant operations like modifying/disabling them directly on bridge or through our merchant operations APIs.
+Once you have on-boarded multiple merchants, and enabled products for them, you can also manage your merchants by editing/disabling them directly on Bridge or through our merchant management APIs.
 
 <NextPage
     info={{
         description: "Create your first merchant",
-        slug: "/payments/umap/merchant-onboarding",
-        title: "Merchant Onboarding",
+        slug: "/payments/umap/merchant-on-boarding",
+        title: "Merchant on-boarding",
     }}
 />
 
