--- a/content/payments/umap/mandates/generic/unpause.mdx
+++ b/content/payments/umap/mandates/generic/unpause.mdx
@@ -12,7 +12,7 @@ visible_in_sidebar: true
         Prerequisites
     </Text>
     <a href="/payments/umap/mandates/generic">
-        UPI Autopay Generic Operations ↗
+        UPI Mandates Generic Operations ↗
     </a>
 </Card>
 
@@ -148,8 +148,8 @@ After receiving pause operation initiated notification, the merchant can use thi
 
 <NextPage
     info={{
-        description: "Explore other UMAP UPI Autopay generic operations here",
+        description: "Explore other UMAP UPI Mandates generic operations here",
         slug: "/payments/umap/mandates/generic",
-        title: "UPI Autopay Generic Operations",
+        title: "UPI Mandates Generic Operations",
     }}
 />
