--- a/content/payments/umap/notifications/mandates/unpause.mdx
+++ b/content/payments/umap/notifications/mandates/unpause.mdx
@@ -11,7 +11,7 @@ visible_in_sidebar: true
     <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
         Prerequisites
     </Text>
-    <a href="/payments/umap/mandates/generic/unpause">UPI Autopay Unpause ↗</a>
+    <a href="/payments/umap/mandates/generic/unpause">UPI Mandates Unpause ↗</a>
 </Card>
 
 <hr class="primary" />
