--- a/content/payments/umap/quickstart.mdx
+++ b/content/payments/umap/quickstart.mdx
@@ -7,54 +7,66 @@ visible_in_sidebar: true
 
 # Quickstart
 
-This guide helps you to get started quickly with UMAP, what product/s combination works best for your business. If you want to understand more on UMAP, please read about UMAP in the Overview page.
+This guide is for you to get started quickly with UMAP, and to select the combination of products that work best for your business. If you want to understand more about what UMAP is, do read about UMAP in the <a href="/payments/umap/overview">Overview</a> page.
 
 ## What can I do with UMAP?
 
-UMAP caters for two specific types of users, `Aggregators` and `Merchants`. Before we dive into UMAP product suite, let's understand more on which user bucket you belong to.
+UMAP caters to two specific categories of businesses—**Merchants** and **Aggregators**. Before you dive into UMAP product suite, explore which category you belong to.
 
-### Aggregators
+<table>
+    <tr>
+        <th><Text as="h4" align="center">Merchants</Text></th>
+        <th><Text as="h4" align="center">Aggregators</Text></th>
+    </tr>
+    <tr>
+        <td>
+            <Text>Merchants are online/offline businesses that provide goods and services directly to customers. Some examples include—</Text>
+            <Text marginBottom="nano">
+                1. Loan providers who enable customers to get credit into their account and enable collections for repayment.
+            </Text>
+            <Text marginBottom="nano">
+                2. Direct to Consumer Brands who want to enable UPI as a payment option on their website/app or messaging channels.
+            </Text>
+            <Text marginBottom="nano">
+                3. Streaming platforms who provide online services for education & entertainment through subscriptions & one time plans.
+            </Text>
+        </td>
+        <td>
+            <Text>Aggregators are online/offline platforms that on-board multiple businesses and provide them value added services. Some examples include—</Text>
+            <Text marginBottom="nano">
+                1. Food delivery app that onboards multiple restaurants and provides delivery riders for them.
+            </Text>
+            <Text marginBottom="nano">
+                2. Website creation platform that has a storefront that plugin providers can integrate.
+            </Text>
+            <Text marginBottom="nano">
+                3. Insurance and Loan marketplaces that can be used by any distributors to sell to customers.
+            </Text>
+        </td>
+    </tr>
+</table>
 
-Aggregators are online and offline platforms that onboard multiple businesses and provide them value added services.
+<br/>
 
-###### Examples
-
--   Food delivery app that onboards multiple restaurants and provides delivery riders for them.
--   Website creation platform that has a storefront that plugin providers can integrate.
--   Insurance and Loan marketplaces that can be used by any distributors to sell to customers.
-
-### Merchants
-
-Merchants are online and offline businesses that provide goods and services directly to customers.
-
-###### Examples
-
--   Loan providers who enable customers to get credit into their account and enable collections for repayment.
--   Direct to Consumer Brands who want to enable UPI as a payment option on their website/app or messaging channels.
--   Streaming platforms who provide online services for education & entertainment through subscriptions & one time plans.
-
-<br />
-
-##### Choose your type of integration
-
+#### Choose how to integrate
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <Link href="/payments/umap/quickstart/aggregators">
-                Aggregators
-            </Link>
+            <Link href="/payments/umap/quickstart/merchants">Integrate as a Merchant</Link>
             <p>
                 Use this section to proceed with integration of UMAP as
-                Aggregators
+                Merchants
             </p>
         </Card>
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <Link href="/payments/umap/quickstart/merchants">Merchants</Link>
+            <Link href="/payments/umap/quickstart/aggregators">
+                Integrate as an Aggregator
+            </Link>
             <p>
                 Use this section to proceed with integration of UMAP as
-                Merchants
+                Aggregators
             </p>
         </Card>
     </Portion>
